--- a/sass/org/_toppage.scss
+++ b/sass/org/_toppage.scss
@@ -1,129 +1,4 @@
-/*--------------------------------------------------------------
-## Top page Block
---------------------------------------------------------------*/
-.tpv{
-	display:block;
-	width:100%;
-	height:100%;
-	position:relative;
-	
-	.tpv-bg{
-		position:absolute;
-		top:0;
-		left:0;
-		width:100%;
-		height:100%;
-		
-		object-fit:cover;
-		object-position: center;
-		pointer-events: none;
-	}
-	
-	.tpv-area{
-		position:absolute;
-		top:0;
-		left:0;
-		width:100%;
-		height:100%;
-		pointer-events: none;
-		
-		display: flex;
-		flex-direction: row;
-		flex-wrap: wrap;
-		justify-content: flex-end;
-		align-items: flex-end;
-		align-content: flex-end;
-		
-		.tpva-categ,.tpva-title{
-			filter:none;
-			font-weight:normal;
-			color:$clb-g10
-		}
-		
-		.tpva-categ{
-			background-color:$cla-l08;
-			margin:0 1.5625vw 0.5vw ;
-			padding: 0 1.5625vw;
-		}
-		.tpva-title{
-			background-color:$cla-d08;
-			margin:0 1.5625vw 0.5vw 10%;
-			padding:0.5vw 1.5625vw ;
-			text-align: right;
-		}
-		.tpva-dect{
-			background-color:$clb-g08;
-			color:$cla-d10;
-			margin:0 1.5625vw 0.5vw 10%;
-			padding:0.5vw 1.5625vw ;
-			text-align: right;
-		}
-		
-		@include mq(xl) {
-			h2{
-				font-size:1.6em;
-				line-height:1.1em;
-				letter-spacing:0.2em;
-			}
-			.tpva-categ{
-				font-size:1.2em;
-				line-height:1.4em;
-				letter-spacing:0.2em;
-			}
-			.tpva-dect{
-				p{
-					font-size:1em;
-				}
-			}
-		}
-		@include mq(md) {
-			h2{
-				font-size:1em;
-				line-height:1.1em;
-				letter-spacing:0.2em;
-			}
-			.tpva-categ{
-				font-size:0.8em;
-				line-height:1.5em;
-				letter-spacing:0.2em;
-			}
-			.tpva-dect{
-				p{
-					font-size:0.7em;
-				}
-			}
-		}
-	}
-	&:hover{
-		.tpv-area{
-			.tpva-title,.tpva-dect{
-				margin-left:5%;
-			}
-		}
-	}
-}
 
-.tpf-newest1,.tpf-newest2,.tpf-newest3,.tpc-1,.tpc-2,.tpc-3{
-	.tpv{
-		.tpv-bg{
-			filter:sepia(40%)  hue-rotate(-16deg) contrast(80%) brightness(80%);
-		}
-		&:hover{
-			.tpv-bg{
-				filter:none;
-			}
-		}
-	}
-}
-.tpf-newest1,.tpf-newest2,.tpf-newest3{
-	.tpv{
-		&:hover{
-			.tpv-bg{
-				animation:buruburu 0.3s 1 linear alternate;
-			}
-		}
-	}
-}
 /*--------------------------------------------------------------
 ## MainView
 --------------------------------------------------------------*/
@@ -368,11 +243,9 @@
 
 .tp-cate{
 	
-	margin :3.125vw 1.5625vw;
 	
 	.tp-intro,.tpc-1,.tpc-2,.tpc-3{
 		.tpc-title{
-			margin-top:1rem;
 			width:100%;
 			position:relative;
 			
@@ -437,15 +310,18 @@
 				margin: 1.5625vw 0;
 				
 				&:hover{
-					position:static;
-					height:90vw;
-					.tpv-bg{
+				
+					@include mq(tb) {
 						position:static;
-						height:70%;
-					}
-					.tpv-area{
-						position:static;
-						height:30%;
+						height:90vw;
+						.tpv-bg{
+							position:static;
+							height:70%;
+						}
+						.tpv-area{
+							position:static;
+							height:30%;
+						}
 					}
 					
 				}
