--- a/sass/org/_elements.scss
+++ b/sass/org/_elements.scss
@@ -91,3 +91,79 @@
 		}
 	}
 }
+
+/*--------------------------------------------------------------
+## Title
+--------------------------------------------------------------*/
+.h1-title{
+	width:100%;
+	position:relative;
+	
+	.h1t-back{
+		width:100%;
+		position:absolute;
+		bottom:0;
+		height:40%;
+	}
+	
+	.h1t-name{
+		position:absolute;
+		top:0;
+		margin: 0 auto;
+		filter: drop-shadow(1px 1px 1px rgba(5, 5, 5, 0.9));
+	
+		display:flex;
+		justify-content: center;
+		align-items: center;
+		h1{
+			text-align:center;
+			color:$clb-g10;
+			text-shadow: 2px 2px 4px $cla-d08;
+		}
+		i{
+			animation: bound 5s ease 0s infinite normal;
+			margin: 0 0.5rem;
+		}
+	}
+	@include mq(xl) {
+		height:3.5em;
+	}
+	@include mq(md) {
+		height:2.5em;
+	}
+}
+
+/*--------------------------------------------------------------
+## Rank
+--------------------------------------------------------------*/
+.vrn{
+	text-decoration:none;
+	margin: 1.5625vw 0;
+	display:block;
+	
+	.vrn-text{
+		display:flex;
+		align-items: flex-end;
+		
+		.rnt-num{
+			font-size:3em;
+		}
+		
+		.vrn-title{
+			
+			display:flex;
+			flex-direction: column;
+			
+			.vrnt-views{
+				font-size:0.6em;
+			}
+			h2{
+				font-size:1em;
+			}
+		}
+	}
+	
+}
+
+
+
