--- a/style.css
+++ b/style.css
@@ -697,7 +697,8 @@ html, body {
     display: flex;
     flex-direction: column; }
   #primary, #secondary {
-    width: calc(100% - 3.125vw); } }
+    width: calc(100% - 3.125vw);
+    margin-left: 1.5625vw; } }
 
 #page {
   max-width: 1600px;
@@ -900,6 +901,52 @@ h1 {
 
 .tpf-newest1 .tpv:hover .tpv-bg, .tpf-newest2 .tpv:hover .tpv-bg, .tpf-newest3 .tpv:hover .tpv-bg {
   animation: buruburu 0.3s 1 linear alternate; }
+
+/*--------------------------------------------------------------
+## Title
+--------------------------------------------------------------*/
+.h1-title {
+  width: 100%;
+  position: relative; }
+  .h1-title .h1t-back {
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    height: 40%; }
+  .h1-title .h1t-name {
+    position: absolute;
+    top: 0;
+    margin: 0 auto;
+    filter: drop-shadow(1px 1px 1px rgba(5, 5, 5, 0.9));
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+    .h1-title .h1t-name h1 {
+      text-align: center;
+      color: #fdfffd;
+      text-shadow: 2px 2px 4px rgba(43, 24, 0, 0.8); }
+    .h1-title .h1t-name i {
+      animation: bound 5s ease 0s infinite normal;
+      margin: 0 0.5rem; }
+  @media screen and (max-width: 2400px) {
+    .h1-title {
+      height: 3.5em; } }
+  @media screen and (max-width: 580px) {
+    .h1-title {
+      height: 2.5em; } }
+
+/*--------------------------------------------------------------
+## Rank
+--------------------------------------------------------------*/
+.vrn {
+  text-decoration: none;
+  margin: 1.5625vw 0;
+  display: block; }
+  .vrn .vrn-text {
+    display: flex; }
+    .vrn .vrn-text .vrn-title {
+      display: flex;
+      flex-direction: column; }
 
 /*--------------------------------------------------------------
 ## Talk
@@ -1121,22 +1168,38 @@ h1 {
     letter-spacing: 0.1em; } }
 
 /*--------------------------------------------------------------
-## Category
+## H1
 --------------------------------------------------------------*/
 @media screen and (max-width: 2400px) {
-  .tp-cate .tp-intro .tpc-title, .tp-cate .tpc-1 .tpc-title, .tp-cate .tpc-2 .tpc-title, .tp-cate .tpc-3 .tpc-title {
-    height: 3.5em; }
-    .tp-cate .tp-intro .tpc-title .tpct-name h1, .tp-cate .tpc-1 .tpc-title .tpct-name h1, .tp-cate .tpc-2 .tpc-title .tpct-name h1, .tp-cate .tpc-3 .tpc-title .tpct-name h1 {
-      font-size: 2.8em; }
-    .tp-cate .tp-intro .tpc-title .tpct-name i, .tp-cate .tpc-1 .tpc-title .tpct-name i, .tp-cate .tpc-2 .tpc-title .tpct-name i, .tp-cate .tpc-3 .tpc-title .tpct-name i {
-      font-size: 2.8rem; } }
+  .h1-title {
+    height: 3em; }
+    .h1-title .h1t-name h1 {
+      font-size: 2.2em; }
+    .h1-title .h1t-name i {
+      font-size: 2.2rem; } }
+
+@media screen and (max-width: 800px) {
+  .h1-title {
+    height: 2.8em; }
+    .h1-title .h1t-name h1 {
+      font-size: 1.8em; }
+    .h1-title .h1t-name i {
+      font-size: 1.8rem; } }
 
 @media screen and (max-width: 580px) {
-  .tp-cate .tp-intro .tpc-title, .tp-cate .tpc-1 .tpc-title, .tp-cate .tpc-2 .tpc-title, .tp-cate .tpc-3 .tpc-title {
+  .h1-title {
+    height: 3em; }
+    .h1-title .h1t-name h1 {
+      font-size: 2.2em; }
+    .h1-title .h1t-name i {
+      font-size: 2.2rem; } }
+
+@media screen and (max-width: 374px) {
+  .h1-title {
     height: 2.5em; }
-    .tp-cate .tp-intro .tpc-title .tpct-name h1, .tp-cate .tpc-1 .tpc-title .tpct-name h1, .tp-cate .tpc-2 .tpc-title .tpct-name h1, .tp-cate .tpc-3 .tpc-title .tpct-name h1 {
+    .h1-title .h1t-name h1 {
       font-size: 1.8em; }
-    .tp-cate .tp-intro .tpc-title .tpct-name i, .tp-cate .tpc-1 .tpc-title .tpct-name i, .tp-cate .tpc-2 .tpc-title .tpct-name i, .tp-cate .tpc-3 .tpc-title .tpct-name i {
+    .h1-title .h1t-name i {
       font-size: 1.8rem; } }
 
 /*--------------------------------------------------------------
@@ -1248,35 +1311,6 @@ h1 {
 .tp-cate {
   display: flex;
   flex-direction: column; }
-  .tp-cate .tp-intro .tpc-title, .tp-cate .tpc-1 .tpc-title, .tp-cate .tpc-2 .tpc-title, .tp-cate .tpc-3 .tpc-title {
-    width: 100%;
-    position: relative; }
-    .tp-cate .tp-intro .tpc-title .tpct-back, .tp-cate .tpc-1 .tpc-title .tpct-back, .tp-cate .tpc-2 .tpc-title .tpct-back, .tp-cate .tpc-3 .tpc-title .tpct-back {
-      width: 100%;
-      position: absolute;
-      bottom: 0;
-      height: 40%; }
-    .tp-cate .tp-intro .tpc-title .tpct-name, .tp-cate .tpc-1 .tpc-title .tpct-name, .tp-cate .tpc-2 .tpc-title .tpct-name, .tp-cate .tpc-3 .tpc-title .tpct-name {
-      position: absolute;
-      top: 0;
-      margin: 0 auto;
-      filter: drop-shadow(1px 1px 1px rgba(5, 5, 5, 0.9));
-      display: flex;
-      justify-content: center;
-      align-items: center; }
-      .tp-cate .tp-intro .tpc-title .tpct-name h1, .tp-cate .tpc-1 .tpc-title .tpct-name h1, .tp-cate .tpc-2 .tpc-title .tpct-name h1, .tp-cate .tpc-3 .tpc-title .tpct-name h1 {
-        text-align: center;
-        color: #fdfffd;
-        text-shadow: 2px 2px 4px rgba(43, 24, 0, 0.8); }
-      .tp-cate .tp-intro .tpc-title .tpct-name i, .tp-cate .tpc-1 .tpc-title .tpct-name i, .tp-cate .tpc-2 .tpc-title .tpct-name i, .tp-cate .tpc-3 .tpc-title .tpct-name i {
-        animation: bound 5s ease 0s infinite normal;
-        margin: 0 0.5rem; }
-    @media screen and (max-width: 2400px) {
-      .tp-cate .tp-intro .tpc-title, .tp-cate .tpc-1 .tpc-title, .tp-cate .tpc-2 .tpc-title, .tp-cate .tpc-3 .tpc-title {
-        height: 3.5em; } }
-    @media screen and (max-width: 580px) {
-      .tp-cate .tp-intro .tpc-title, .tp-cate .tpc-1 .tpc-title, .tp-cate .tpc-2 .tpc-title, .tp-cate .tpc-3 .tpc-title {
-        height: 2.5em; } }
   .tp-cate .tp-intro .tpc-index, .tp-cate .tpc-1 .tpc-index, .tp-cate .tpc-2 .tpc-index, .tp-cate .tpc-3 .tpc-index {
     height: auto;
     display: flex;
@@ -1315,8 +1349,15 @@ h1 {
     margin-right: 5px;
     font-size: 1.6rem; }
 
-#sidebar {
-  background-color: blue; }
+.sidebar {
+  background-color: #ffe6e6; }
+  @media screen and (max-width: 2400px) {
+    .sidebar .s-wrapper {
+      position: sticky;
+      top: 0; } }
+  @media screen and (max-width: 580px) {
+    .sidebar .s-wrapper {
+      position: static; } }
 
 #foot {
   background-color: rgba(43, 24, 0, 0.8);
